# postman2openapi

./: .gitignore  Cargo.toml  Cross.toml  README.md  build-web.sh  build.rs  justfile  webdriver.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yaml  release.yaml  website.yaml
ci/: cargo-out-dir
cli/: Cargo.toml  build.rs
cli/src/: main.rs
js/: package-lock.json  package.json
postman2openapi-cli/: Cargo.toml  README.md
postman2openapi-cli/src/: main.rs
src/: core.rs  error.rs  lib.rs  main.rs  value.rs
src/backends/: mod.rs  openapi3_0.rs
src/formats/: mod.rs
src/formats/openapi/: error.rs  mod.rs
src/formats/openapi/data/v3.0/: uspto.yaml
src/formats/openapi/v3_0/: components.rs  mod.rs  schema.rs
src/formats/postman/: mod.rs
src/openapi/: error.rs  mod.rs
src/openapi/data/v2/: petstore_minimal.yaml  rocks.yaml
src/openapi/data/v3.0/: petstore-expanded.yaml
src/openapi/v2/: mod.rs  schema.rs
src/openapi/v3_0/: components.rs  schema.rs
src/postman/: mod.rs
tests/: integration_tests.rs  unit_tests.rs  wasm_browser.rs  wasm_node.rs
tests/fixtures/: api-key.postman.json  calculator-soap.postman.json  duplicate-query-params.postman.json  echo.postman.json  empty-header-object.postman.json  fastly.postman.json  github.postman.json  gotomeeting.postman.json  graphql.postman.json  merge.postman.json  noauth.postman.json  oauth2-code.postman.json  only-root-path.postman.json  pdfco.postman.json  postman-api.postman.json  todo.postman.json  twitter-api.postman.json  users.postman.json
tests/fixtures/wasm/: openapi.json
web/: collection.json  index.html  index.js  package-lock.json  package.json  webpack.config.js
web/css/: demo.css
web/js/: index.js  web.js
web/static/: index.html
