[package]
name = "postman2openapi"
description = "Convert a Postman collection to an OpenAPI definition. "
homepage = "https://github.com/kevinswiber/postman2openapi"
repository = "https://github.com/kevinswiber/postman2openapi"
license = "Apache-2.0"
version = "0.1.0"
authors = ["Kevin Swiber <kswiber@gmail.com>"]
build = "build.rs"
readme = "README.md"
documentation = "https://docs.rs/postman2openapi"
edition = "2018"

[features]
binary = ["clap", "atty"]

[lib]
name = "postman2openapi"
path = "src/lib.rs"

[[bin]]
name = "postman2openapi"
path = "src/main.rs"
required-features = ["binary"]

[dependencies]
anyhow = "1.0"
convert_case = "0.4.0"
indexmap = { version = "1.5.1", features = ["serde-1"] }
lazy_static = "1.4.0"
regex = "1"
semver = "0.10.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = { version = "1.0", features = ["raw_value"]}
serde_yaml = "0.8"
thiserror = "1.0"
url = { version = "2.1.1", features = ["serde"] }

# binary only
atty = { version = "0.2", optional = true }
clap = { version = "3.0.0-beta.1", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.0"
